@@ -226,8 +226,10 @@ General configuration
    * app.add_role
    * app.add_generic_role
    * app.add_source_parser
+   * download.not_readable
    * image.data_uri
    * image.nonlocal_uri
+   * image.not_readable
    * ref.term
    * ref.ref
    * ref.numref
